--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		<div id="inputs">
 			<div class="input-wrapper-first">
 				<label for="people">Number of People</label>
-				<input type="number" id="people"/>
+				<input type="number" min="0" id="people"/>
 			</div>
 			<div class="input-wrapper">
 				<label for="length">Meeting Length (Hours) </label>
-				<input type="number" id="length"/>
+				<input type="number" min="0" id="length"/>
 			</div>
 			<div class="input-wrapper">
 				<label>Meeting Frequency</label>
